# cmake-learning-path

./: .gitignore  .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
cmake_modules/: cmake_debug.cmake  create_library.cmake  execute_library.cmake  packages_control.cmake
config/: CMakeLists.txt
src/: CMakeLists.txt
src/my_math/: CMakeLists.txt
src/my_math/include/: my_math.h
src/my_physics/: CMakeLists.txt
src/my_physics/include/: my_pyhsics.h
src/my_physics/src/: my_pyhsics.cpp
src/my_science/: CMakeLists.txt
src/my_science/include/: my_science.h
src/my_science/src/: my_science.cpp
